--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
-  "name": "node-hikvision-api",
+  "name": "@copcart/node-hikvision-api",
   "version": "0.0.1",
   "description": "Hikvision HTTP API Module",
-  "main": "hikvision.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
-    "xml2js": "^0.4.16",
-    "net-keepalive": "^0.3.3"
+    "@mhoc/axios-digest-auth": "^0.8.0",
+    "axios": "^1.6.7",
+    "net-keepalive": "^3.0.1",
+    "xml2js": "^0.6.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/xml2js": "^0.4.14",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
+  },
   "scripts": {
-    "test": "echo 0"
+    "test": "echo 0",
+    "clean": "rm -rf dist/",
+    "build": "npm run clean && tsc"
   },
   "repository": {
     "type": "git",
@@ -29,5 +49,8 @@
   "bugs": {
     "url": "https://github.com/nayrnet/node-hikvision-api/issues"
   },
-  "homepage": "https://github.com/nayrnet/node-hikvision-api#readme"
+  "homepage": "https://github.com/nayrnet/node-hikvision-api#readme",
+  "files": [
+    "/dist"
+  ]
 }
