--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@copcart/node-hikvision-api",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "HikVision HTTP ISAPI Module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,7 +28,9 @@
   "scripts": {
     "test": "echo 0",
     "clean": "rm -rf dist/",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "example:1": "ts-node src/examples/01-basic.ts",
+    "example:2": "ts-node src/examples/02-set-stream-parameters.ts"
   },
   "repository": {
     "type": "git",
