--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@copcart/node-hikvision-api",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "HikVision HTTP ISAPI Module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -29,8 +29,10 @@
     "test": "echo 0",
     "clean": "rm -rf dist/",
     "build": "npm run clean && tsc",
-    "example:1": "ts-node src/examples/01-basic.ts",
-    "example:2": "ts-node src/examples/02-set-stream-parameters.ts"
+    "example:1": "ts-node examples/01-basic.ts",
+    "example:2": "ts-node examples/02-set-stream-parameters.ts",
+    "example:3": "ts-node examples/03-get-streaming-capabilities.ts",
+    "example:4": "ts-node examples/04-network-settings.ts"
   },
   "repository": {
     "type": "git",
