--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@copcart/node-hikvision-api",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "HikVision HTTP ISAPI Module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,7 +32,8 @@
     "example:1": "ts-node examples/01-basic.ts",
     "example:2": "ts-node examples/02-set-stream-parameters.ts",
     "example:3": "ts-node examples/03-get-streaming-capabilities.ts",
-    "example:4": "ts-node examples/04-network-settings.ts"
+    "example:4": "ts-node examples/04-network-settings.ts",
+    "example:5": "ts-node examples/05-validate-streaming-channel.ts"
   },
   "repository": {
     "type": "git",
